--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <!-- Text Content -->
         <div class="col-md-6">
           <h1 class="display-3 font-weight-bold mb-4">
-            Hi<span class="text-yellow-300">there,</span><br />
+            Hi<span class="text-white-300">There,</span><br />
             i'm<span class="text-pink-300">Dayaat</span>
           </h1>
           <p class="lead mb-4 text-gray-200">
@@ -92,8 +92,8 @@
     </div>
   
     <!-- Background Elements -->
-    <div class="absolute top-10 left-10 bg-yellow-300 w-20 h-20 rounded-full blur-xl opacity-40"></div>
-    <div class="absolute bottom-20 right-20 bg-pink-400 w-40 h-40 rounded-full blur-2xl opacity-50"></div>
+    <div class="absolute top-10 left-10 bg-yellow-300 w-20 h-20 rounded-full blur-xl opacity-5"></div>
+    <div class="absolute bottom-20 right-20 bg-pink-400 w-40 h-40 rounded-full blur-2xl opacity-5"></div>
   </section>
 
   <!-- About Us Section -->
@@ -109,7 +109,7 @@
   <!-- Portfolio Section -->
   <section id="portfolio" class="py-28 bg-gradient-to-r from-blue-500 to-purple-600 text-white" data-aos="fade-in">
     <div class="container">
-      <h2 class="display-4 mb-6 text-center font-weight-bold text-yellow-300">Portfolio</h2>
+      <h2 class="display-4 mb-4 text-center font-weight-text-black">Portfolio</h2>
       <p class="text-center text-gray-200 mb-5">
         A showcase of our recent projects and creative works.
       </p>
@@ -119,8 +119,8 @@
     </div>
 
     <!-- Background Decorations -->
-    <div class="absolute top-0 left-0 bg-yellow-300 w-32 h-32 rounded-full blur-2xl opacity-40"></div>
-    <div class="absolute bottom-10 right-20 bg-pink-400 w-40 h-40 rounded-full blur-xl opacity-50"></div>
+    <div class="absolute top-0 left-0 bg-yellow-300 w-32 h-32 rounded-full blur-2xl opacity-5"></div>
+    <div class="absolute bottom-10 right-20 bg-pink-400 w-40 h-40 rounded-full blur-xl opacity-5"></div>
   </section>
 
   <!-- Skills Section -->
@@ -172,16 +172,16 @@
   <!-- Contact Form -->
   <section id="contact" class="py-28 bg-gradient-to-r from-blue-500 to-purple-600 text-white" data-aos="fade-in">
     <div class="container">
-      <h2 class="display-4 mb-6 text-center font-weight-bold text-yellow-300">Contact</h2>
+      <h2 class="display-4 mb-6 text-center">Contact</h2>
       <form id="contactForm" class="space-y-4" onsubmit="handleFormSubmit(event)">
         <div class="form-group">
-          <input type="text" id="name" class="form-control py-3 px-4 rounded-lg text-gray-900" placeholder="Name" required>
+          <input type="text" id="name" class="form-control py-3 px-4 rounded-lg text-gray-900" placeholder="Your Name" required>
         </div>
         <div class="form-group">
-          <input type="email" id="email" class="form-control py-3 px-4 rounded-lg text-gray-900" placeholder="Email" required>
+          <input type="email" id="email" class="form-control py-3 px-4 rounded-lg text-gray-900" placeholder="Your Email" required>
         </div>
         <div class="form-group">
-          <textarea id="message" class="form-control py-3 px-4 rounded-lg text-gray-900" rows="4" placeholder="Message" required></textarea>
+          <textarea id="message" class="form-control py-3 px-4 rounded-lg text-gray-900" rows="4" placeholder="Your Message" required></textarea>
         </div>
         <button type="submit" onclick="sendmail()" class="btn btn-warning w-100 py-3 font-weight-bold rounded-lg shadow-lg">Send</button>
       </form>
@@ -223,7 +223,7 @@
     // Dynamic Portfolio Items
     const portfolioItems = [
       { title: 'Project 1', imgSrc: 'Foto3.jpg' },
-      { title: 'Project 2', imgSrc: 'Foto4.jpg' },
+      { title: 'Project 2', imgSrc: 'Foto4.png' },
       { title: 'Project 3', imgSrc: 'Foto5.jpg' },
     ];
 
